--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="login-form">
         <img src="logo.png" width="95%">
     <div class = "form">
-        <form class = "register-form">
+        <form class = "register-form" >
         <input type ="text" placeholder="name"/>
         <input type ="password" placeholder="password"/>
         <input type ="text" placeholder="email id"/>
@@ -19,9 +19,9 @@
         <p class="message">Already Registered?  <a href = "#">Login</a></p>
         </form>
 
-    <form class="login-page">
-        <input type ="text" placeholder="name"/>
-        <input type ="password" placeholder="password"/>
+    <form class="login-page" action = "loginAccess.php">
+        <input type ="text" name = "name" placeholder="name"/>
+        <input type ="password" name = "password" placeholder="password"/>
         <button>login</button>
         <p class="message">Not Registered?  <a href="#">Register</a></p>
     </form>
